objects/ccrz__E_ProductTab__c.object
<CustomObject>
    <description>Object used to created additional pieces of formatted content.  This content would be displayed within tabs/sections of the product detail page.</description>
    <fields>
        <fullName>ccrz__ContentRT__c</fullName>
        <description>Rich text field version of the Content field.</description>
        <label>ContentRT</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__Content__c</fullName>
        <description>HTML formatted content</description>
        <label>Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not the content is available to be displayed</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The last date that this content will be available for display</description>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <description>Language for the content. For multiple languages, multiple entries will be needed within this object</description>
        <label>Locale</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductTabId__c</fullName>
        <description>External reference Id</description>
        <displayFormat>{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>ProductTab Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <description>Reference to the product associated with this content</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Product Tabs</relationshipLabel>
        <relationshipName>E_ProductTabs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Determines the order the tabs appear in the ProductDetails page</description>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The first date that this content will be available for display</description>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Tab__c</fullName>
        <description>Tab Name used to uniquely identify and name the content</description>
        <label>Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Info</fullName>
                </value>
                <value>
                    <fullName>Specifications</fullName>
                </value>
                <value>
                    <fullName>Items Included</fullName>
                </value>
                <value>
                    <fullName>Shipping Info</fullName>
                </value>
                <value>
                    <fullName>Why Buy this Product</fullName>
                </value>
                <value>
                    <fullName>Additional Information</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>ItemsIncluded</fullName>
                </value>
                <value>
                    <fullName>Resources and Additional Information</fullName>
                </value>
                <value>
                    <fullName>ShippingInfo</fullName>
                </value>
                <value>
                    <fullName>Why Buy This</fullName>
                </value>
                <value>
                    <fullName>Product Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CC Product Tab</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>ccrz__Product__c</columns>
        <columns>ccrz__Tab__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TAB-{00000}</displayFormat>
        <label>Product Tab Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Tabs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>